# GhostVaultRS

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build_and_deploy.yaml  docker_build.yaml  pull_req_builder.yaml
docker_compose/: compose.yaml
ghostvaultd/src/: cli_server.rs  main.rs
gv-cli/src/: cli_client.rs
lib/src/: config.rs  constants.rs  daemon_helper.rs  file_ops.rs  gv_client_methods.rs  gv_home_init.rs  gv_methods.rs  gvdb.rs  lib.rs  rpc.rs  task_runner.rs  term_link.rs
lib/src/tg_bot/: bot_tasks.rs  keyboards.rs  tg_bot.rs
lib/src/tg_bot/charts/: charts.rs
lib/src/tg_bot/dialogs/: chart_range_dialog.rs  reward_interval_dialog.rs  reward_min_dialog.rs  reward_mode_dialog.rs  utils.rs
