[package]
name = "GhostVaultRS"
version = "0.9.1"
edition = "2021"
description = "GhostVault Rust implementation"
repository = "https://github.com/bleach86/GhostVaultRS"
authors = ["bleach86 <[email protected]>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
log4rs = { version = "1.3.0", features = ["background_rotation", "gzip"] }
env_logger = "0.11.2"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
reqwest = { version = "0.11", features = ["json"] }
bitcoincore-zmq = { git = "https://github.com/bleach86/rust-ghostcore-zmq.git", branch = "master", features = [
    "async",
] }

hyper = { version = "0.14.21", default-features = false, features = [
    "tcp",
    "http1",
    "http2",
    "client",
    "runtime",
] }

anyhow = "1.0.80"
futures = "0.3"
futures-util = "0.3.30"
tarpc = { version = "0.34", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

colored = "2.1.0"
indicatif = "0.16"
tar = "0.4.40"
flate2 = "1.0.28"
sha2 = "0.10.8"
data-encoding = "2.5.0"
home = "0.5.9"
walkdir = "=2.4.0"
toml = "0.8.10"
whoami = "1.4.1"
sled = "0.34.7"
systemstat = "0.2.3"
humantime = "2.1.0"
term_size = "0.3.2"
openssl-sys = { version = "0.9.101", features = ["vendored"] }
daemonize = "0.5.0"
chrono = "0.4.37"
chrono-tz = { version = "0.8.6", features = ["case-insensitive"] }
url = "2.5.0"
plotters = "0.3.3"
rust_socketio = { version = "0.5.0", features = ["async"] }
clap = { version = "4.4.18", features = ["derive"] }
rand = "0.8.5"
tracing = { version = "0.1" }

[workspace.metadata.cross.target.armv7-unknown-linux-gnueabihf]
# Install libfontconfig-dev for armv7
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libfontconfig-dev:$CROSS_DEB_ARCH",
]

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libfontconfig-dev for aarch64
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libfontconfig-dev:$CROSS_DEB_ARCH",
]

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
# Install libfontconfig-dev for x86_64
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libfontconfig-dev:$CROSS_DEB_ARCH",
]


[lib]
name = "service"
path = "lib/src/lib.rs"

[[bin]]
name = "gv-cli"
path = "gv-cli/src/cli_client.rs"

[[bin]]
name = "ghostvaultd"
path = "ghostvaultd/src/main.rs"
